--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -627,26 +627,21 @@ body.plantshare {
             }                
         }
         .sighting-gallery {
-          h2 {
-            margin-top: 50px;
-          }
-
-          ul {
-            position: relative;
-
-            li {
-              display: inline;
-              list-style: none;
-              margin: 5px;
-              height: 128px;
-              vertical-align: bottom;
-
-              img {
-                vertical-align: bottom;
-              }
+            h2 {
+                margin-top: 50px;
             }
 
-          }
+            ul {
+
+                li {
+                    list-style: none;
+                    margin: 5px;
+                }
+                img {
+                    max-height: 500px;
+                    max-width: 500px;
+                }
+            }
 
         }
         .modal-container {
