--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -634,8 +634,10 @@ body.plantshare {
             ul {
 
                 li {
+                    height: auto;
                     list-style: none;
                     margin: 5px;
+                    padding: 10px 0;
                 }
                 img {
                     max-height: 500px;
