Fix layout on the sighting page.

--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -25,7 +25,7 @@
 {% endif %}
 
 <div class="sighting-gallery">
-    <h2>Sighting Photos</h2>
+    <h2>Photos</h2>
     <ul>
     {% for photo in sighting.photos.all %}
         <li><img src="{{ photo.image.url }}" /></li>
