--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1210,9 +1210,10 @@ body.plantshare.sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0
 body.plantshare.sighting form fieldset legend { display: block; text-indent: -9000px; }
 body.plantshare.sighting form .post-sighting-btn { background: transparent url(/static/images/layout/plantshare2-btn.png) no-repeat -372px -634px; border: 0 none; display: block; width: 157px; height: 32px; text-indent: -9999px; }
 body.plantshare.sighting form .post-sighting-btn.inactive { background-position: -372px -599px; }
+body.plantshare.sighting .sighting-gallery { clear: both; }
 body.plantshare.sighting .sighting-gallery h2 { margin-top: 50px; }
-body.plantshare.sighting .sighting-gallery ul li { height: auto; list-style: none; margin: 5px; padding: 10px 0; }
-body.plantshare.sighting .sighting-gallery ul img { max-height: 500px; max-width: 500px; }
+body.plantshare.sighting .sighting-gallery ul li { height: auto; list-style: none; margin: 0; padding: 10px 0; }
+body.plantshare.sighting .sighting-gallery ul img { max-height: 710px; max-width: 710px; }
 body.plantshare.sighting .modal-container { position: relative; }
 body.plantshare.sighting .modal-container .image-modal { background-color: white; border: 5px solid #ACAC90; display: none; padding: 15px; position: absolute; width: 400px; height: 160px; top: 250px; left: 0px; z-index: 10; }
 body.plantshare.sighting .modal-container .image-modal img { float: left; margin: 0 20px 10px 0; max-height: 84px; max-width: 84px; }
