--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -627,6 +627,7 @@ body.plantshare {
             }                
         }
         .sighting-gallery {
+            clear: both;
             h2 {
                 margin-top: 50px;
             }
@@ -636,12 +637,12 @@ body.plantshare {
                 li {
                     height: auto;
                     list-style: none;
-                    margin: 5px;
+                    margin: 0;
                     padding: 10px 0;
                 }
                 img {
-                    max-height: 500px;
-                    max-width: 500px;
+                    max-height: 710px;
+                    max-width: 710px;
                 }
             }
 
