Clarify label for PlantShare checklists feature. (#480)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -16,7 +16,7 @@
             <li class="ask">{% nav_item 'Ask the Botanist' ps-questions %}</li>
             
             {% if user.is_authenticated %}
-                <li class="checklists">{% nav_item 'Checklists' ps-checklists %}</li>
+                <li class="checklists">{% nav_item 'Plant Checklists' ps-checklists %}</li>
                 <li class="people">{% nav_item 'Find People' ps-find-people %}</li>
                 {% comment %}
                 <li class="groups">{% nav_item 'Your Groups' %}{# TODO: add URL name #}</li>
