--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -14,10 +14,10 @@
 {% block body_attributes %}id="checklists" class="plantshare checklists"{% endblock %}
 
 {% block main_content %}
-<h1>Checklists</h1>
+<h1>Plant Checklists</h1>
 
 <div class="notification box">
-    <p>Check out our checklists!<p>
+    <p>Check out our plant checklists!<p>
     <ul>
         <li>Create your own checklist of plants you have seen.</li>
         <li>Share checklists with friends, students, and colleagues.</li>
