Increase default sightings map zoom level.
Cookies must be cleared in order to see this change. (#484)

--- a/gobotany/mapping/templates/_sightings_map.html
+++ b/gobotany/mapping/templates/_sightings_map.html
@@ -1,4 +1,4 @@
 <div id="{{ id }}" class="map" data-type="sightings" 
     data-latitude="{{ latitude }}" data-longitude="{{ longitude }}"
-    data-center-title="{{ center_title }}"
+    data-center-title="{{ center_title }}" data-zoom="{{ zoom }}"
     style="width: {{ width }}; height: {{ height }}"></div>
