Finish adding text changes for checklists. (#480)

--- a/gobotany/plantshare/templates/_delete_checklist.html
+++ b/gobotany/plantshare/templates/_delete_checklist.html
@@ -14,7 +14,8 @@
     <div>
         <a class="close">Close</a>
 
-        <h2>Are you sure you want to permanently delete this checklist?</h2>
+        <h2>Are you sure you want to permanently delete this plant
+            checklist?</h2>
 
         <table>
             <thead>
