--- a/gobotany/plantshare/templates/checklist_detail.html
+++ b/gobotany/plantshare/templates/checklist_detail.html
@@ -2,7 +2,7 @@
 {% load gobotany_tags %}
 {% load mapping_tags %}
 
-{% block title %}Checklist: {{ checklist.name }}: PlantShare{% endblock %}
+{% block title %}Plant Checklist: {{ checklist.name }}: PlantShare{% endblock %}
 
 {% block js_require %}
     require(['util/suggester_init', 'plantshare/plantshare']);
@@ -11,7 +11,7 @@
 {% block body_attributes %}id="checklist" class="plantshare checklists"{% endblock %}
 
 {% block main_content %}
-<h1>Checklist: {{ checklist.name }}</h1>
+<h1>Plant Checklist: {{ checklist.name }}</h1>
 
 <div class="ps-section">
     <p>Comments: {{ checklist.comments }}</p>
@@ -19,7 +19,7 @@
     <table id="checklist-detail" class="checklists-list">
         <thead>
             <tr>
-                <th class="name">Name<span></span></th>
+                <th class="name">Plant Name<span></span></th>
                 <th class="image">Image</th>
                 <th class="date-sighted">Date Sighted</th>
                 <th class="location">Location</th>
