--- a/gobotany/plantshare/templates/edit_checklist.html
+++ b/gobotany/plantshare/templates/edit_checklist.html
@@ -1,7 +1,7 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 {% load mapping_tags %}
 
-{% block title %}Edit Checklist: {{ checklist.name }}: PlantShare{% endblock %}
+{% block title %}Edit Plant Checklist: {{ checklist.name }}: PlantShare{% endblock %}
 
 {% block more_meta_link %}
 <link rel="stylesheet" href="/static/css/smoothness/jquery-ui-1.9.2.custom.min.css" />
@@ -18,7 +18,7 @@
 {% block body_attributes %}id="edit-checklist" class="plantshare checklists"{% endblock %}
 
 {% block main_content %}
-<h1>Edit Checklist: {{ checklist.name }}</h1>
+<h1>Edit Plant Checklist: {{ checklist.name }}</h1>
 
 <div class="checklists-section">
 {% include "_image_upload_form.html" with image_form=entry_image_form %}
@@ -66,7 +66,7 @@
         <table id="add-sightings-table">
             <thead>
                 <tr>
-                    <th class="name">Name <span>(Required)</span></th>
+                    <th class="name">Plant Name <span>(required)</span></th>
                     <th class="image">Image</th>
                     <th class="date-sighted">Date Sighted</th>
                     <th class="location">Location</th>
