Add 'Here' marker to left navigation for Edit Sightings page.

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -230,6 +230,7 @@ body {
     }
     &.plantshare {
         &#sighting #sidebar .sightings a::before,
+        &#edit-sighting #sidebar .manage-sightings a::before,
         &#questions #sidebar .ask a::before,
         &#checklist #sidebar .checklists a::before,
         &#new-checklist #sidebar .checklists a::before,
